--- a/jxr-er/pom.xml
+++ b/jxr-er/pom.xml
@@ -6,6 +6,13 @@
     <artifactId>jxr-er</artifactId>
     <version>1.0</version>
     <name>jxr-er</name>
+    
+    <parent>
+      <groupId>findbugs-reporter</groupId>
+      <artifactId>builder</artifactId>
+      <version>1.0</version>
+    </parent>
+    
     <description>Command line tool for generating JavaCrossReference</description>
     <build>
         <sourceDirectory>src</sourceDirectory>
@@ -21,6 +28,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -31,7 +39,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2-beta-5</version>
+                <version>2.4</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -44,7 +52,6 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                         <phase>package</phase> <!-- bind to the packaging phase -->
                         <goals>
                             <goal>single</goal>
